more cleanup and skeleton site

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,14 +1,12 @@
 </main>
     <footer>
-        <h6>{{ .Site.Copyright | markdownify }} |
-            {{ T "rendered" }} <a href="https://gohugo.io" title="Hugo">Hugo</a> |
-            <a href="{{.Site.BaseURL}}index.xml">{{ T "subscribe" }} </a></h6>
+        <h6>
+            <a href="{{.Site.BaseURL}}about" title="About">About</a> |
+            <a href="{{.Site.BaseURL}}index.xml">{{ T "subscribe" }} </a>
+        </h6>
     </footer>
 </div>
-<script src="{{ "js/scripts.js" | relURL }}"></script>
-{{ if .Site.GoogleAnalytics }}
-  {{ template "_internal/google_analytics_async.html" . }}
-{{ end }}
+<!--<script src="{{ "js/scripts.js" | relURL }}"></script>-->
 </body>
 
 </html>
