--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -30,17 +30,17 @@
              </li>
              <li>
                <a href="mailto:intarga@protonmail.com" title="E-Mail">
-               <i class="fab fa-at fa-lg"></i>
+               <i class="fas fa-at fa-lg"></i>
                </a>
              </li>
              <li>
                <a href="{{.Site.BaseURL}}about" title="About">
-               <i class="fab fa-info-circle fa-lg"></i>
+               <i class="fas fa-info-circle fa-lg"></i>
                </a>
              </li>
              <li>
                <a href="{{.Site.BaseURL}}index.xml" title="RSS">
-               <i class="fab fa-rss fa-lg"></i>
+               <i class="fas fa-rss fa-lg"></i>
                </a>
              </li>
            {{- end -}}
