--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,6 +29,11 @@
                </a>
              </li>
              <li>
+               <a href="https://sr.ht/~intarga/" title="Sourcehut">
+               <i class="far fa-circle fa-lg"></i>
+               </a>
+             </li>
+             <li>
                <a href="mailto:intarga@protonmail.com" title="E-Mail">
                <i class="fas fa-at fa-lg"></i>
                </a>
