--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,2 +1,4 @@
+@import url(./normalize.css);
+@import url(./fonts.css);
 @import url(./styles-light.css);
 @import url(./styles-dark.css) (prefers-color-scheme: dark);
