--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
     <li {{if eq $index 0}}class="first" {{end}}>
       <h1><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h1>
       {{ partial "aside" . }}
-      <!--{{ partial "featured_image" .}}-->
+      {{ partial "featured_image" .}}
       <p>{{ .Summary }}</p>
       {{ if .Truncated }}
       <a href="{{ .RelPermalink }}">{{ T "readMore" }}</a>
