--- a/static/css/styles-dark.css
+++ b/static/css/styles-dark.css
@@ -167,7 +167,7 @@ time {
 
 #container main article p code {
   padding: 0.2em;
-  background-color: #d03232;
+  background-color: #393939;
   font-size: 0.9em;
 }
 
