--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -10,6 +10,10 @@
 
     {{ partial "featured_image" . }}
 
+    {{ if (.Params.toc) }}
+      {{.TableOfContents}}
+    {{ end }}
+
     {{ .Content }}
 
 </article>
