--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -2,7 +2,7 @@
 
     <title>{{ .Title }} | {{ .Site.Title }}</title>
 
-    <h2>{{ .Title }}</h2>
+    <h2>{{ .Title | markdownify }}</h2>
 
     {{ if or (not (isset .Params "meta")) (eq .Params.meta true) }}
       {{ partial "aside" . }}
