re-remove the slashes in social link for about/RSS
This was seems to work now? before this commit I was finding double
slashes... Not much seems to have changed though, only thing I can think
of was that I moved the {{ end }} tags.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -30,12 +30,12 @@
            {{- end -}}
         {{ end }}
              <li>
-               <a href="{{.Site.BaseURL}}/about" title="About">
+               <a href="{{.Site.BaseURL}}about" title="About">
                <i class="fas fa-info-circle fa-lg"></i>
                </a>
              </li>
              <li>
-               <a href="{{.Site.BaseURL}}/index.xml" title="RSS">
+               <a href="{{.Site.BaseURL}}index.xml" title="RSS">
                <i class="fas fa-rss fa-lg"></i>
                </a>
              </li>
