generate <title> on homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 
 <section id="home">
+  <title>{{ .Site.Title }}</title>
   <ul>
     {{ $hp_length := 10 }}
     {{ if isset .Site.Params "homepagelength" }}
