--- a/static/css/styles-light.css
+++ b/static/css/styles-light.css
@@ -41,6 +41,7 @@ time {
 
 #container header {
   margin-bottom: 1em;
+  border-bottom: solid 3px #cecece;
 }
 
 #container header h1 {
@@ -70,6 +71,10 @@ time {
   #container header ul li {
     margin: 0 1em 0 0;
   }
+}
+
+#container header p {
+  padding-bottom: 1em;
 }
 
 #container nav {
@@ -112,6 +117,10 @@ time {
 }
 
 #container main section#home ul li h2 {
+  margin: 0.2em 0;
+}
+
+#container main h2 {
   margin: 0.2em 0;
 }
 
