--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -3,6 +3,6 @@
 <meta name="description" content="{{ .Site.Params.description | default "The HTML5 Herald" }}" />
 <meta name="author" content="{{ .Params.Author | default .Site.Author.name }}" />
 {{- with .OutputFormats.Get "rss" -}}
-	{{ printf `<link rel="%s" type="%s+%s" href="%s" title="%s" />` .Rel .MediaType.Type .MediaType.Suffix .Permalink $.Site.Title | safeHTML }}
+	{{ printf `<link rel="%s" type="%s+%s" href="%s" title="%s" />` .Rel .MediaType.Type .MediaType.FirstSuffix.Suffix .Permalink $.Site.Title | safeHTML }}
 {{- end -}}
 {{ hugo.Generator -}}
