use sans-serif default font everywhere

--- a/static/css/styles-dark.css
+++ b/static/css/styles-dark.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: "Roboto Slab", serif;
+  font-family: sans-serif;
   color: #ffffff;
   background: #2A2829;
 }
@@ -16,7 +16,7 @@ h4,
 h5,
 h6,
 time {
-  font-family: "Ruda", sans-serif;
+  font-family: sans-serif;
 }
 
 #container {
@@ -76,7 +76,6 @@ time {
 #container nav {
   border-bottom: solid 3px #cecece;
   padding-bottom: 0.5em;
-  font-family: "Ruda", sans-serif;
 }
 
 #container nav ul {
@@ -249,7 +248,6 @@ width: 100%;
 
 .meta-aside, #container main section#home ul li aside, #container main article aside {
   margin: 0.5em 0;
-  font-family: "Ruda", sans-serif;
   color: #909090;
   font-size: 0.8em;
 }
