improve blockquote styling

--- a/static/css/styles-light.css
+++ b/static/css/styles-light.css
@@ -407,23 +407,16 @@ table thead {
 }
 
 blockquote {
-  margin: 1em;
-  border-left: solid 0.1em #cecece;
-  padding: 0.5em 2em;
+  border-left: solid 0.25em #cecece;
+  margin: 0.5em;
+  padding: 0.5em;
   position: relative;
-  background-color: #efefef;
-  box-shadow: 0 -1px 0 #bbbbbb inset;
+  background-color: #f9f9f9;
+  border-radius: 0.5em;
 }
 
-blockquote::before {
-  content: "\f10d";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  font-size: 3em;
-  color: rgba(192, 192, 192, 0.3);
-  position: absolute;
-  left: 6px;
-  top: 0;
+blockquote > p {
+  margin: 0em;
 }
 
 @media only screen and (max-width: 800px) {
