--- a/static/css/styles-dark.css
+++ b/static/css/styles-dark.css
@@ -389,23 +389,16 @@ table thead {
 }
 
 blockquote {
-  margin: 1em;
-  border-left: solid 0.1em #797979;
-  padding: 0.5em 2em;
+  border-left: solid 0.25em #cecece;
+  margin: 0.5em;
+  padding: 0.5em;
   position: relative;
   background-color: #3e3b3c;
-  box-shadow: 0 -1px 0 #797979 inset;
+  border-radius: 0.5em;
 }
 
-blockquote::before {
-  content: "\f10d";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  font-size: 3em;
-  color: rgba(192, 192, 192, 0.3);
-  position: absolute;
-  left: 6px;
-  top: 0;
+blockquote > p {
+  margin: 0em;
 }
 
 @media only screen and (max-width: 800px) {
