--- a/static/css/styles-dark.css
+++ b/static/css/styles-dark.css
@@ -401,6 +401,12 @@ blockquote > p {
   margin: 0em;
 }
 
+blockquote > .source {
+  margin: 0em;
+  text-align: right;
+  font-size: 0.9em;
+}
+
 @media only screen and (max-width: 800px) {
   blockquote {
     margin: 1em 0;
